## Process this file with automake to produce Makefile.in
# @copyright:	Copyright (C) 2017 Kuhrman Technology Solutions LLC.
#
# This file is part of libbzenc.
#
# @license:	GPLv3+: GNU GPL version 3
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
# @author:	Karl Kuhrman
#

AM_CFLAGS = $(WARN_CFLAGS) $(WERROR_CFLAGS) $(CFLAG_VISIBILITY) -pthread

# Add source file sub-directories to compiler search path
AM_CPPFLAGS = \
	-Iinc -I$(top_srcdir)/inc \
	-Ilib/gnulib -I$(top_srcdir)/lib/gnulib \
	-Isrc -I$(top_srcdir)/src

# API header files to install
bzenincdir = $(includedir)/bzenc
bzeninc_HEADERS = \
	$(top_srcdir)/inc/bzenlog.h \
	$(top_srcdir)/inc/bzenmem.h \
	$(top_srcdir)/inc/bzensbuf.h \
	$(top_srcdir)/inc/bzensock.h \
	$(top_srcdir)/inc/bzentest.h \
	$(top_srcdir)/inc/bzenthread.h
	$(top_srcdir)/inc/bzentime.h

# package details
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libbzenc.pc

# make libtools library
lib_LTLIBRARIES = libbzenc.la

libbzenc_la_SOURCES = \
	bzenlog.c \
	bzenlog.h \
	bzenmem.c \
	bzenmem.h \
	bzensbuf.c \
	bzensbuf.h \
	bzensock.c \
	bzensock.h \
	bzentest.c \
	bzentest.h \
	bzenthread.c \
	bzenthread.h \
	bzentime.h

# Gnu Lib
libbzenc_la_LIBADD = $(LTLIBINTL) $(top_builddir)/lib/gnulib/libgnu.a

libbzenc_la_LDFLAGS = -rpath '$(libdir)'

